<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/berandaFragment">

    <fragment
        android:id="@+id/nav_listEksplan"
        android:name="com.example.kuljarhanip.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_scanQRCode"
        android:name="com.example.kuljarhanip.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_daftarKontam"
        android:name="com.example.kuljarhanip.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_daftarRak"
        android:name="com.example.kuljarhanip.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.kuljarhanip.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_logOut"
        android:name="com.example.kuljarhanip.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/blankFragment"
        android:name="com.example.kuljarhanip.BlankFragment"
        android:label="fragment_blank"
        tools:layout="@layout/fragment_blank" />
    <activity
        android:id="@+id/insertDataEksplanActivity"
        android:name="com.example.kuljarhanip.insertDataEksplanActivity"
        android:label="activity_insert_data_eksplan"
        tools:layout="@layout/activity_insert_data_eksplan" />
    <fragment
        android:id="@+id/berandaFragment"
        android:name="com.example.kuljarhanip.BerandaFragment"
        android:label="Home"
        tools:layout="@layout/fragment_beranda" />
    <fragment
        android:id="@+id/tanamanFragment"
        android:name="com.example.kuljarhanip.tanamanFragment"
        android:label="Daftar Tanaman"
        tools:layout="@layout/fragment_tanaman" />
</navigation>